# libvisa-stub

./: .gitignore  CMakeLists.txt  stub.c
.github/workflows/: build.yml
