cmake_minimum_required( VERSION 3.9 )

project(
	visa
	VERSION 0.0.0
	DESCRIPTION "A stub library to build VISA applications against, no license required."
)
set(
	lib_name
	${PROJECT_NAME}
)
if (WIN32)
	set(
		lib_name
		${lib_name}64
	)
endif (WIN32)

set(OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/out)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/out)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/out)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/out)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/out)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/out)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/out)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/out)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/out)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/out)

set(
	BUILD_SHARED_LIBS
	TRUE
)

set(
	CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS
	TRUE
)

add_library(
	${lib_name}
	SHARED
	./stub.c
)

set_target_properties(
	${lib_name}
	PROPERTIES
	PUBLIC_HEADER
	./visa.h
)

set_target_properties(
	${lib_name}
	PROPERTIES
	PUBLIC_HEADER
	./visatypes.h
)
